--- a/src/app/view/login-block/blocks/login-block/login-block.component.html
+++ b/src/app/view/login-block/blocks/login-block/login-block.component.html
@@ -1,1 +1,1 @@
-<app-login-form-ui></app-login-form-ui>
+<app-login-form-ui [formError]="serverError" (login)="onLogin($event)"></app-login-form-ui>
