--- a/src/app/view/login-block/blocks/login-block/login-block.component.html
+++ b/src/app/view/login-block/blocks/login-block/login-block.component.html
@@ -1,2 +1,1 @@
-<app-login-form-ui [formError]="serverError" (login)="onLogin($event)"></app-login-form-ui>
-<app-keyboard></app-keyboard>
+<app-login-form-ui [formError]="serverError" (login)="onLogin($event)" class="flex-center"></app-login-form-ui>
