--- a/src/app/view/login-block/ui/login-form-ui/login-form-ui.component.html
+++ b/src/app/view/login-block/ui/login-form-ui/login-form-ui.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroup" (input)="onFormChange()" (ngSubmit)="onFormSubmit()">
+<form [formGroup]="formGroup" (input)="onFormChange()" (ngSubmit)="onFormSubmit()" class="card">
   <h2>Авторизация</h2>
   <div>
     <label>Логин</label>
