--- a/src/app/view/login-block/ui/login-form-ui/login-form-ui.component.scss
+++ b/src/app/view/login-block/ui/login-form-ui/login-form-ui.component.scss
@@ -1,5 +1,10 @@
 .card{
-	width: 300px;
+	width: 500px;
+	padding: 20px;
 	box-shadow: 0 2px 12px 6px rgba(51, 31, 31, .2);
-	border-radius: 4px;
+	border-radius: 7px;
+	border: 14px solid #7f7fb5;
+}
+.p5{
+	padding: 5px;
 }
