--- a/src/app/view/login-block/blocks/login-block/login-block.component.html
+++ b/src/app/view/login-block/blocks/login-block/login-block.component.html
@@ -1,2 +1,2 @@
-<app-login-form-ui [formError]="serverError" (login)="onLogin($event)"></app-login-form-ui>
+<app-login-form-ui (login)="onLogin($event)" [formError]="serverError"></app-login-form-ui>
 <app-keyboard></app-keyboard>
