--- a/src/app/view/login-block/ui/login-form-ui/login-form-ui.component.html
+++ b/src/app/view/login-block/ui/login-form-ui/login-form-ui.component.html
@@ -1,6 +1,6 @@
 <form
 	[formGroup]="formGroup"
-	(change)="onFormChange()"
+	(input)="onFormChange()"
 	(ngSubmit)="onFormSubmit()"
 	class="form"
 >
