--- a/src/app/pages/auth/pages/auth/auth-page.component.html
+++ b/src/app/pages/auth/pages/auth/auth-page.component.html
@@ -1,3 +1,3 @@
 <p>auth-page works!</p>
 <p>user1@gmail.com</p>
-<app-login-block class='flex-center'></app-login-block>
+<app-login-block class="flex-center"></app-login-block>
