login action effects reducer update

--- a/src/app/view/login-block/ui/login-form-ui/login-form-ui.component.html
+++ b/src/app/view/login-block/ui/login-form-ui/login-form-ui.component.html
@@ -19,6 +19,10 @@
 
   <div class="debug-card">
     <div class="debug-card_block">
+      <i> isAuth | async </i>
+      <b>{{ isAuth | async }}</b>
+    </div>
+    <div class="debug-card_block">
       <i> formGroup.errors | json </i>
       <b>{{ formGroup.errors | json }}</b>
     </div>
